@@ -1,3 +1,10 @@
+2010-08-20 H. Doreau <henri.doreau@gmail.com>
+	* Topology.py: pruned the exception tree so that the module now only
+	have a unique exception type. This helps keeping higher level code
+	clean.  Details can still be added using the exception string.
+	* tests/TopologyTests.py: updated the tests to use this unique
+	exception.
+
 2010-08-03 H. Doreau <henri.doreau@gmail.com>
 	* Propagation.py: fixed a bug that disallowed the lib to respect the
 	value of the fanout to correctly dispatch tasks within the propagation
